# ass_tag_parser

./: .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ass_tag_parser.yml  build.yml
ass_tag_analyzer/: __init__.py  ass_format.py  ass_parser.py  ass_type_parser.py
ass_tag_analyzer/ass_item/: __init__.py  ass_item.py  ass_tag_alignment.py  ass_tag_alpha.py  ass_tag_blur.py  ass_tag_border.py  ass_tag_clip.py  ass_tag_color.py  ass_tag_fade.py  ass_tag_font_scale.py  ass_tag_general.py  ass_tag_karaoke.py  ass_tag_position.py  ass_tag_rotation.py  ass_tag_shadow.py  ass_tag_shear.py  ass_tag_wrap_style.py
ass_tag_analyzer/ass_item/ass_invalid_tag/: __init__.py  ass_invalid_tag.py  ass_invalid_tag_alignment.py  ass_invalid_tag_alpha.py  ass_invalid_tag_border.py  ass_invalid_tag_color.py  ass_invalid_tag_font_scale.py  ass_invalid_tag_general.py  ass_invalid_tag_rotation.py  ass_invalid_tag_shadow.py  ass_invalid_tag_wrap_style.py
ass_tag_analyzer/ass_item/ass_valid_tag/: __init__.py  ass_valid_tag_alignment.py  ass_valid_tag_alpha.py  ass_valid_tag_blur.py  ass_valid_tag_border.py  ass_valid_tag_clip.py  ass_valid_tag_color.py  ass_valid_tag_fade.py  ass_valid_tag_font_scale.py  ass_valid_tag_general.py  ass_valid_tag_karaoke.py  ass_valid_tag_position.py  ass_valid_tag_rotation.py  ass_valid_tag_shadow.py  ass_valid_tag_shear.py  ass_valid_tag_wrap_style.py
ass_tag_parser/: __init__.py  ass.py  ass_composer.py  ass_parser.py  ass_struct.py  common.py  draw.py  draw_composer.py  draw_parser.py  draw_struct.py  errors.py  io.py
ass_tag_parser/data/: ass_bnf.txt  draw_bnf.txt
ass_tag_parser/test/: test_ass.py  test_ass_composing.py  test_ass_parsing.py  test_ass_serializing.py  test_draw.py  test_draw_composing.py  test_draw_parsing.py  test_draw_serializing.py
ass_tag_parser/tests/: conftest.py  test_all.py  test_ass_composing.py  test_ass_parsing.py  test_documentation.py  test_draw_composing.py  test_draw_parsing.py  test_module_exports.py
tests/: test_ass_parser.py  test_ass_type_parser.py
tests/ass_item/ass_valid_tag/: test_ass_valid_tag_alignment.py  test_ass_valid_tag_alpha.py  test_ass_valid_tag_blur.py  test_ass_valid_tag_border.py  test_ass_valid_tag_clip.py  test_ass_valid_tag_color.py  test_ass_valid_tag_fade.py  test_ass_valid_tag_font_scale.py  test_ass_valid_tag_general.py  test_ass_valid_tag_karaoke.py  test_ass_valid_tag_position.py  test_ass_valid_tag_rotation.py  test_ass_valid_tag_shadow.py  test_ass_valid_tag_shear.py  test_ass_valid_tag_wrap_style.py
