[tool.poetry]
name = "ass_tag_parser"
version = "2.4.1"
description = "Parse ASS subtitle format tags markup."
authors = ["Marcin Kurczewski <dash@wind.garden>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bubblesub/ass_tag_parser"
classifiers = [
    "Environment :: Other Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "ass_tag_parser" }
]
include = ["ass_tag_parser/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
py36 = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
strict = true
disallow_untyped_decorators = false

[tool.pylint.master]
jobs = 0

[tool.pylint.message_control]
disable = [
    "import-error",
    "no-self-use",
    "missing-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "too-many-instance-attributes",
]
attr-rgx = "^io|[xy]\\d*|[a-z_][a-z0-9_]{2,}$"
argument-rgx = "^io|[xy]\\d*|[a-z_][a-z0-9_]{2,30}$"
variable-rgx = "^io|[xy]\\d*|[a-z_][a-z0-9_]{2,30}$"
method-rgx = "^visit_\\w+|[a-z_][a-z0-9_]{2,}$"
