[metadata]
name = ass_tag_parser
version = 2.3.2
url = https://github.com/bubblesub/ass_tag_parser
author = Marcin Kurczewski
author_email = rr-@sakuya.pl
description = "Parse ASS subtitle format tags markup."
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Markup
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.9
package_dir = ass_tag_parser=ass_tag_parser
packages = find:

[options.package_data]
docstring_parser = py.typed

[options.extras_require]
test =
    pytest
    black
